# blindspot

./: .gitignore  ARCHITECTURE.md  README.md  architecture.mmd
backend/: pyproject.toml
backend/src/: config.py
backend/src/agents/: adversary.py  base.py  benchmarker.py  chief_counsel.py  investigator.py  jurist.py  negotiator.py  scout.py
backend/src/api/: main.py
backend/src/cache/: cache_layer.py
backend/src/orchestration/: graph.py
backend/src/retrieval/: retriever.py
backend/src/state/: schema.py
backend/src/tools/: docx_generator.py  email_renderer.py  validation.py
frontend/: index.html
scripts/: mass_replace.py  run_demo.sh  seed_corpora.py
