[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "blindspot-backend"
version = "1.0.0"
description = "Blindspot v2.0 - Autonomous Legal Agent Backend"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "chromadb>=0.4.0",
    "google-genai>=1.0.0",
    "python-docx>=1.1.0",
    "pypdf>=3.17.0",
    "sse-starlette>=2.1.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.26.0",
    "langgraph>=0.0.30",
    "langchain-core>=0.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "httpx>=0.26.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
